style.css
:root {
    --sidebar-color: #059669;
    --header-color: #ffffff;
    --main-content-color: #f2faf6;
    --main-content-gap: 26px;
}

body {
    height: 100vh;
    margin: 0;
    padding: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    display: grid;
    grid-template-columns: 1fr 4fr;
    grid-template-rows: max-content 1fr;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

/* Header */

.header {
    grid-column: 2 / 3;
    box-shadow: 0 1px 6px 0 rgb(0 0 0 / 50%);
    background-color: var(--header-color);
    padding-inline: 64px;
    display: grid;
    grid-template-rows: 1fr 1fr;
    align-items: center;
    gap: 16px;
    padding-block: 12px;
}

.header-1 {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
}

.search {
    display: flex;
    align-items: center;
    gap: 16px;
}

.search > input {
    border: none;
    background-color: rgb(167, 243, 208, 0.4);
    border-radius: 50px;
    height: 30px;
    width: 100%;
    max-width: 500px;
    min-width: 100px;
    padding-inline: 12px;
    font-size: 16px;
}

input:focus {
    outline: none;
    border: 1px solid #059669;
}

.header-1 > .user {
    justify-self: end;
    margin-right: 12px;
    font-weight: 600;
    font-size: 18px;
    display: flex;
    align-items: center;
    gap: 24px;
}

.profile {
    height: 2.5em;
    border-radius: 50%;
}

.header-2 {
    display: grid;  
    grid-template-columns: 1fr 1fr;
    align-items: center;
}

.header-2 > .user {
    display: flex;
    align-items: center;
    gap: 16px;

    > .profile {
        height: 3.5em;
    }
}

.header-2 > .user > div {
    font-weight: 600;

    > span:first-child {
        display: block;
        font-size: 0.85rem;
        display: block;
    }

    > span:last-child {
        font-size: 1.4rem;
    }
}

.btns {
    justify-self: end;
    display: flex;
    gap: 24px;
}

button {
    border: none;
    background-color: #059669;
    color: white;
    font-weight: 600;
    padding: 10px 24px;
    border-radius: 50px;
    transition: all 150ms;
}

button:hover {
    background-color: rgb(5, 150, 105, 0.9);
    cursor: pointer;
}

button:active {
    transform: scale(0.95);
}

/* Sidebar */

.sidebar {
    grid-row: 1 / 3;
    background-color: var(--sidebar-color);
    color: white;
    display: flex;
    flex-direction: column;
    gap: 40px;
    padding-inline: 24px;
}

.logo {
    margin-top: 16px;
    gap: 6px;
    font-weight: 600;
    font-size: 1.7rem;
    display: flex;
    align-items: center;
}

.logo-icon {
    height: 1.5em;
}

.menu {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.menu > li {
    font-size: 1.3rem;
    font-weight: 600;
}

.menu > li > img {
    margin-right: 12px;
}

.inline-icon {
    height: 1em;
    position: relative;
    top: .125em;
}

.info {
    color: #3c3b3b;
}

/* Main Content */

.main-content {
    grid-column: 2 / 3;
    padding: 24px;
    background-color: var(--main-content-color);
    display: grid;
    grid-template-columns: 3fr 1fr;
    gap: var(--main-content-gap);
}

.projects, .announcements, .trending {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.announcements, .trending {
    min-width: 250px;
}

.title {
    font-weight: 600;
    font-size: 1.4rem;
}

.card > .heading {
    font-weight: 600;
    font-size: 1.1rem;
}

.projects {
    grid-row: 1 / 3;
}

.cards {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
    gap: var(--main-content-gap);
}

.card {
    background-color: white;
    border-radius: 6px;
    box-shadow: 1px 1px 6px 0 rgb(0, 0, 0, 0.2);
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 12px;
    padding: 28px;
}

.project-card {
    border-left: 10px solid #166534;
}

.icons {
    align-self: flex-end;
    display: flex;
    gap: 16px;
}

.icon {
    height: 1.7em;
}

.announcement {
    > .heading {
        font-weight: 600;
        font-size: 0.95rem;
    }

    > .info {
        font-size: 0.9rem;
        margin-top: 3px;
    }
}

.info {
    -webkit-line-clamp: 3;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

hr {
    width: 100%;
    border: 1px solid rgb(0, 0, 0, 0.1);
}

.trending {
    margin-top: var(--main-content-gap);
    font-size: 15px;
}

.trending-card {
    display: grid;
    gap: 28px;
}

.trending-card > .user {
    display: flex;
    align-items: center;
    gap: 16px;
}

.username {
    font-weight: 600;
}

